2003-10-22  Vincent Untz  <vincent@vuntz.net>

	* elections/2003/voters.html: the file is encoded in UTF-8, so add a
	meta telling so.
	* elections/2003/voters.html: updated the e-mail address for teuf.

2003-10-22  Vincent Untz  <vincent@vuntz.net>

	* elections/2003/voters.html: fix the link to the images.

2003-10-22  Vincent Untz  <vincent@vuntz.net>

	* index.html
	* elections/index.html: announce the new elections
	* elections/2003/index.html
	* elections/2003/overview.html
	* elections/2003/rules.html
	* elections/2003/voters.html: stuff for the new elections

2003-10-16  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: tell the applicant he will receive his
	application by mail, update the committee address

2003-10-16  Vincent Untz  <vincent@vuntz.net>

	* membership-form.php: Cc the application to the applicant so he have
	a confirmation of his application

2003-10-08  Vincent Untz  <vincent@vuntz.net>

	* .htaccess: really fixed it. Well, I hope :-)

2003-10-08  Vincent Untz  <vincent@vuntz.net>

	* .htaccess: ok, I was really tired. Completed the Redirect foo so that
	it really works.

2003-10-07  Vincent Untz  <vincent@vuntz.net>

	* index.html: put the dates in dd/mm/yyyy format instead of two or three
	different formats.

	* .htaccess: added so we can redirect people from the old pages to the
	new ones. I'd like to have a htaccess file which is moved to .htaccess
	when copying the website (so it is not hidden in CVS), but that'll be
	for later

	* membership-form.html: removed (we now use membership-form.php)

	* press.html
	* press/*: removed these because we now point to press releases on
	gnome.org.

	* advisory_board.html
	* board_of_directors-2000.html
	* board_of_directors-2001.html
	* board_of_directors.html
	* charter.html
	* directory.html
	* documentation.html
	* executive_director.html
	* faq-ln7.html
	* faq.html
	* index.html
	* membership-list.html
	* membership-policy.html
	* membership.html
	* organization.html