@@ -58,7 +58,7 @@
   </li>
   <li>
    <p style="margin-bottom: 0in">
-    Alejandro Sánchez Acosta &lt;raciel@no_spam.es.gnu.org&gt;
+    Alejandro Sánchez Acosta &lt;asanchez@no_spam.gnu.org&gt;
    </p>
   </li>
   <li>
@@ -923,7 +923,7 @@
   </li>
   <li>
    <p style="margin-bottom: 0in">
-    Jaka Mocnik &lt;aka@no_spam.gnu.org&gt;
+    Jaka Mocnik &lt;jaka@no_spam.gnu.org&gt;
    </p>
   </li>
   <li>
@@ -1098,7 +1098,7 @@
   </li>
   <li>
    <p style="margin-bottom: 0in">
-    Carlos Perello Marin &lt;carlos@no_spam.gnome-db.org&gt;
+    Carlos Perello Marin &lt;carlos@no_spam.gnome.org&gt;
    </p>
   </li>
   <li>
@@ -1488,7 +1488,7 @@
   </li>
   <li>
    <p style="margin-bottom: 0in">
-    Xing Wang &lt;quixon@no_spam.gnuchina.org&gt;
+    Xing Wang &lt;wangxing@no_spam.tsinghua.org.cn&gt;
    </p>
   </li>
   <li>
