@@ -1,3 +1,8 @@
+2003-10-24  Vincent Untz  <vincent@vuntz.net>
+
+	* elections/2003/voters.html: updated e-mail address for Alejandro
+	Sanchez Acosta, Jaka Mocnik, Carlos Perello Marin, Xing Wang
+
 2003-10-22  Vincent Untz  <vincent@vuntz.net>
 
 	* elections/2003/voters.html: the file is encoded in UTF-8, so add a
